--- a/app/src/main/res/layout/fragment_time.xml
+++ b/app/src/main/res/layout/fragment_time.xml
@@ -8,6 +8,7 @@
         <variable
             name="timestorage"
             type="org.publicntp.gnssreader.repository.TimeStorageConsumer" />
+
         <variable
             name="locationstorage"
             type="org.publicntp.gnssreader.repository.LocationStorageConsumer" />
@@ -34,14 +35,28 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-            <ImageView
-                android:id="@+id/time_image_logo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="0dp"
-                android:layout_marginTop="0dp"
-                android:contentDescription="@string/time_image_logo_desc"
-                android:src="@drawable/icon_publicntp_logo" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <pl.droidsonroids.gif.GifImageView
+                    android:id="@+id/time_image_logo"
+                    android:layout_width="70dp"
+                    android:layout_height="70dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    android:contentDescription="@string/time_image_logo_desc"
+                    android:src="@drawable/logo_spin_finite" />
+
+                <TextView
+                    android:text="PublicNTP"
+                    android:textSize="40sp"
+                    android:textColor="@color/black"
+                    android:layout_gravity="center_vertical"
+                    android:fontFamily="@font/roboto"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+            </LinearLayout>
 
         </RelativeLayout>
 
