Changed icon to the provided picture and created the Satellite Radial Chart.

--- a/app/src/main/res/layout/fragment_satellite.xml
+++ b/app/src/main/res/layout/fragment_satellite.xml
@@ -1,65 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context="org.publicntp.gnssreader.ui.SatelliteFragment">
 
-    <RelativeLayout
+    <!--<RelativeLayout
         android:id="@+id/satellite_layout_count"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="parent">
+        android:layout_height="wrap_content">
 
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/test_string"
+            android:textSize="18sp" />
+    </RelativeLayout>-->
 
-        <!--<TextView-->
-        <!--android:id="@+id/"-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content" />-->
-
-
-    </RelativeLayout>
-
-    <org.publicntp.gnssreader.ui.chart.SatellitePositionChart
-        android:id="@+id/satellite_position_radial_chart"
-        android:layout_width="0dp"
+    <org.publicntp.gnssreader.ui.chart.radialchart.SatelliteRadialChart
+        android:id="@+id/satellite_radial_chart"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="0dp"
-        app:layout_constraintDimensionRatio="H,1:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/satellite_layout_count" />
-
+        android:layout_weight="16" />
 
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/satellite_signal_bar_chart"
-        android:layout_width="369dp"
-        android:layout_height="155dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/satellite_position_radial_chart" />
-    <!--<org.publicntp.gnssreader.ui.chart.SatelliteSignalChart
-        android:id="@+id/satellite_signal_bar_chart"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginEnd="0dp"
-        android:layout_marginStart="0dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintDimensionRatio="H,3:1"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/satellite_position_radial_chart" />-->
+        android:layout_weight="8" />
 
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
