--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,10 @@
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
 
+    <color name="greydark">#555555</color>
+    <color name="grey">#999999</color>
+    <color name="greylight">#CCCCCC</color>
+
+    <color name="blue">#3333FF</color>
+
 </resources>
