--- a/app/src/main/res/layout/fragment_satellite.xml
+++ b/app/src/main/res/layout/fragment_satellite.xml
@@ -24,10 +24,17 @@
         android:layout_height="0dp"
         android:layout_weight="16" />
 
-    <com.github.mikephil.charting.charts.BarChart
-        android:id="@+id/satellite_signal_bar_chart"
+
+    <lecho.lib.hellocharts.view.ColumnChartView
+        android:id="@+id/satellite_bar_chart"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="8" />
+
+    <!--<com.github.mikephil.charting.charts.BarChart
+        android:id="@+id/satellite_signal_bar_chart"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="8" />-->
 
 </LinearLayout>
