--- a/app/src/main/res/layout/fragment_server.xml
+++ b/app/src/main/res/layout/fragment_server.xml
@@ -1,133 +1,156 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="org.publicntp.gnssreader.ui.ServerFragment">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <lecho.lib.hellocharts.view.LineChartView
-        android:id="@+id/server_line_graph"
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp" />
+    <data>
+
+        <variable
+            name="servertimestorage"
+            type="org.publicntp.gnssreader.repository.TimeStorageConsumer" />
+    </data>
 
     <LinearLayout
-        android:id="@+id/server_layout_net_activity"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context="org.publicntp.gnssreader.ui.ServerFragment">
 
-        <TextView
-            android:id="@+id/server_display_net_activity"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:layout_marginStart="0dp"
-            android:fontFamily="@font/roboto"
-            android:text="@string/placeholder_server_traffic"
-            android:textColor="@color/primary_dark"
-            android:textSize="45sp"
-            tools:text="0,000" />
+        <lecho.lib.hellocharts.view.LineChartView
+            android:id="@+id/server_line_graph"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp" />
 
-        <TextView
-            android:id="@+id/server_display_net_units"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignBaseline="@+id/server_display_net_activity"
-            android:layout_alignBottom="@+id/server_display_net_activity"
-            android:layout_marginBottom="0dp"
-            android:layout_marginStart="8dp"
-            android:layout_toEndOf="@+id/server_display_net_activity"
-            android:fontFamily="@font/roboto_medium"
-            android:text="packets/sec"
-            android:textColor="@color/primary_dark"
-            android:textSize="20sp"
-            tools:text="units" />
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/server_layout_net_activity"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_margin="16dp"
+                android:layout_weight="1"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/server_display_net_activity"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="0dp"
+                    android:layout_marginStart="0dp"
+                    android:fontFamily="@font/roboto"
+                    android:text="@string/placeholder_server_traffic"
+                    android:textColor="@color/primary_dark"
+                    android:textSize="@dimen/large_detail_text_size"
+                    android:textStyle="bold"
+                    tools:text="1,234" />
+
+                <TextView
+                    android:id="@+id/server_display_net_units"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="0dp"
+                    android:layout_marginStart="8dp"
+                    android:fontFamily="@font/roboto_medium"
+                    android:text="packets/sec"
+                    android:textColor="@color/primary_dark"
+                    android:textSize="@dimen/unit_text_size"
+                    tools:text="packets/sec" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="2"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:id="@+id/server_layout_time"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="24dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/server_display_time"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto"
+                        android:text="@{servertimestorage.getAdjustedDateString(context)}"
+                        android:textColor="@color/primary_dark"
+                        android:textSize="@dimen/large_detail_text_size"
+                        android:textStyle="bold"
+                        tools:text="00:00:00" />
+
+                    <TextView
+                        android:id="@+id/server_display_time_zone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:fontFamily="@font/roboto_medium"
+                        android:text="@string/default_timezone"
+                        android:textColor="@color/primary_dark"
+                        android:textSize="@dimen/unit_text_size"
+                        tools:text="TZONE" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:id="@+id/server_layout_offset"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="0dp"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/server_text_offset"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="0dp"
+                        android:layout_marginStart="0dp"
+                        android:fontFamily="@font/roboto_light"
+                        android:text="@{servertimestorage.getDateDifference()}"
+                        android:textColor="@color/primary"
+                        android:textSize="34sp"
+                        tools:text="±0.000" />
+
+                    <TextView
+                        android:id="@+id/time_text_offset_units"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="0dp"
+                        android:layout_marginStart="8dp"
+                        android:fontFamily="@font/roboto_light"
+                        android:text="@string/time_accuracy_units"
+                        android:textColor="@color/primary"
+                        android:textSize="20sp" />
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/server_btn_toggle"
+                style="@style/AppTheme.Button.Large"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="24dp"
+                android:layout_weight="1"
+                android:fontFamily="@font/roboto_medium"
+                android:text="@string/server_status"
+                android:textSize="20sp"
+                tools:text="Server On" />
+
+        </LinearLayout>
 
     </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/server_layout_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/server_display_time"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto"
-            android:text="23:45:43"
-            android:textColor="@color/primary_dark"
-            android:textSize="45sp"
-            tools:text="00:00:00" />
-
-        <TextView
-            android:id="@+id/server_display_time_zone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/roboto_medium"
-            android:text="@string/default_timezone"
-            android:textColor="@color/primary_dark"
-            android:textSize="20sp"
-            tools:text="TZONE" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/server_layout_offset"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="0dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/server_text_offset"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:layout_marginStart="0dp"
-            android:fontFamily="@font/roboto_light"
-            android:text="±1.234"
-            android:textColor="@color/primary"
-            android:textSize="34sp"
-            tools:text="±0.000" />
-
-        <TextView
-            android:id="@+id/time_text_offset_units"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="0dp"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/roboto_light"
-            android:text="@string/time_accuracy_units"
-            android:textColor="@color/primary"
-            android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/server_btn_toggle"
-        style="@style/AppTheme.Button.Large"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="24dp"
-        android:fontFamily="@font/roboto_medium"
-        android:text="@string/server_status"
-        android:textSize="20sp"
-        tools:text="server toggle" />
-
-</LinearLayout>
+</layout>
